--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico" /> -->
+    <link rel="icon" sizes="192x192" href="/icon-192x192.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Azure AI</title>
+    <title>ChatBNT @ BioNData | INTERNAL PREVIEW</title>
   </head>
   <body>
     <div id="root"></div>
